# LongCat-Audio-Codec

./: README.md  pyproject.toml
longcat_audio_codec/: __init__.py  model_loader.py  paths.py
longcat_audio_codec/configs/: LongCatAudioCodec_decoder_16k_4codebooks.yaml  LongCatAudioCodec_decoder_24k_2codebooks.yaml  LongCatAudioCodec_decoder_24k_4codebooks.yaml  LongCatAudioCodec_encoder.yaml
networks/semantic_codec/: LongCatAudioCodec_model.py  model_loader.py
semantic_tokenizer_general/: encoder.py
